welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: Unmatched closing brace '}' ignored here
  return c}
          ^