welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
  var c:Int=0
  c=test(a)+test(b)+test(c)+test(d)
  return c}
  
                                               }

def estTeen(a:Int):Boolean={return (a>=13&&a<=19)
}
def test(a:Int)={
  if (estTeen(a)){
    return 1
  }
  else{return 0}
}